<resources>
    <string name="app_name">时间提醒</string>
    <string name="openAlarm">开启提醒</string>
    <string name="add">添加</string>
    <string name="settings">设置</string>
    <string name="lastTime">玩耍时间</string>
    <string name="stopTime">学习时间</string>
    <string name="type">提醒方式</string>
    <string name="ring">铃声</string>
    <string name="curLastTime">已玩耍时间</string>
    <string name="curStopTime">已学习时间</string>
    <string name="hint">请输入时间(分钟)</string>
    <string name="statistics">使用统计</string>
    <string name="openSleepAlarm">开启睡觉提醒</string>
    <string name="sleepTime">睡觉时间</string>
    <string name="alarmTip">玩耍时间已经到了哦~\n(点击回到桌面)</string>


</resources>
