<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:showDividers="middle"
    android:divider="@drawable/line"
    android:orientation="vertical">

    <TextView
        android:id="@+id/widget_lastTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:paddingBottom="10dp"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:paddingTop="10dp"
        android:text="@string/lastTime"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/widget_stopTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        android:gravity="center_vertical"
        android:text="@string/stopTime"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/widget_sleepTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        android:gravity="center_vertical"
        android:text="@string/sleepTime"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/widget_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        android:gravity="center_vertical"
        android:text="@string/type"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/widget_ring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        android:gravity="center_vertical"
        android:text="@string/ring"
        android:textColor="#000000"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/widget_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:gravity="center_vertical"
        android:textColor="#5b5858"
        android:textSize="15sp" />


</LinearLayout>